<?xml version="1.0"?>
<package format="3">
  <name>r-gator-description-2</name>
  <version>1.0.0</version>
  <description>The r_gator_description is the description of the RGator vehicle</description>
  <maintainer email="hangcui1201@gmail.com">Hang Cui</maintainer>
  <author email="hangcui1201@gmail.com">Hang Cui</author>
  <url type="repository">https://github.com/hangcui1201/POLARIS_GEM_e2_Simulator.git</url>
  <license>BSD</license>

  <!-- Buildtool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build and run dependencies -->
  <depend>gazebo_ros_pkgs</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <!-- <depend>gazebo_ros_control</depend> -->
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>rviz2</depend>
  <depend>launch</depend>
  
  <!-- If you need to use ROS1 bridge or any specific ROS1 packages, list them here -->
  <!-- <depend>ros1_bridge</depend> -->

  <export>
    <architecture_independent />
  </export>
</package>
