<?xml version="1.0"?>
<package format="2">
  <name>r_gator_description</name>
  <version>1.0.0</version>
  <description>The gem_description is the description of gem vehicle</description>
  <author email="hangcui1201@gmail.com">Hang Cui</author>
  <maintainer email="hangcui1201@gmail.com"> Hang Cui </maintainer>
  <url type="repository">https://github.com/hangcui1201/POLARIS_GEM_e2_Simulator.git</url>
  <license>BSD</license>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros_control</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>

    <architecture_independent />
  </export>
</package>
